I improved my web page depending on the comments from today

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
     padding: 0;
 }
 .header {
-   height: 780px;
+   height: 800px;
 	background: url(../image/IMG-89542.jpg) no-repeat center center fixed;
 	background-size: cover;
 }
@@ -16,6 +16,12 @@ body {
     
 }
 
+#navbar {
+    padding-left: 0;
+}
+p, span, form {
+    font-size: 17px;
+}
 h1 {
    margin: 0;
     padding: 0;
@@ -63,7 +69,8 @@ h1 {
     display: block;
 }
 .pics {
-    margin: 6px;
+    margin: 13px;
+    margin-right: 0;
     border: solid 2px black;
 }
 @media (max-width: 768px) {
@@ -84,4 +91,8 @@ h1 {
     .h11 {
     padding-left: 0;
 }
+}
+ol, ul li {
+    list-style-type: none;
+    font-size: 17px;
 }
