--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,16 @@ body {
     
 }
 
+.hobbies {
+    margin-left:40px; 
+}
+
 #navbar {
     padding-left: 0;
+    margin-bottom: 0px;
+}
+.cont {
+    margin-bottom: 55px;
 }
 p, span, form {
     font-size: 17px;
@@ -110,6 +118,9 @@ footer {
     padding-left: 100px;
 }
 @media (max-width: 768px) {
+    footer {
+        position: static;
+    }
     .facetwitt {
         display: inline-block;
         margin: 3px;
@@ -120,6 +131,9 @@ footer {
 	background-size: cover;
         width: 100%;
 }
+    .row {
+        text-align: left;
+    }
     body {
         margin: 0;
         padding: 0;
@@ -127,4 +141,14 @@ footer {
     .h11 {
     padding-left: 0;
 }
+    .hobbies {
+    margin-left:0px; 
+}
+    .image {
+        margin-bottom: 10px;
+        margin-top: 0px;
+    }
+    h1 {
+        font-size: 40px;
+    }
 }
